<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/congratulations_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/m_lg"
    android:gravity="center|center_vertical"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="@+id/h_guideline"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    tools:visibility="visible">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="196dp"
        android:layout_height="196dp"
        android:layout_margin="36dp"
        app:srcCompat="@drawable/img_trophy"
        android:contentDescription="@string/trophy" />

    <TextView
        android:id="@+id/tv_congratulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congratulations"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <TextView
        android:id="@+id/tv_congratulations_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin"
        android:text="@string/you_have_a_good_memory" />

    <Button
        android:id="@+id/btn_go_back_to_game"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/extra_large"
        android:layout_height="wrap_content"
        android:text="@string/play_again" />

</androidx.appcompat.widget.LinearLayoutCompat>