<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.HighscoreActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginLeft="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/level"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="@dimen/header_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/gp_game_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_large"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/rd_easy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/r_btn_selector"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/easy"
            android:textColor="@drawable/r_btn_text_color_selector" />

        <RadioButton
            android:id="@+id/rd_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/r_btn_selector"
            android:button="@null"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/medium"
            android:textColor="@drawable/r_btn_text_color_selector" />

        <RadioButton
            android:id="@+id/rd_hard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/r_btn_selector"
            android:button="@null"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/hard"
            android:textColor="@drawable/r_btn_text_color_selector" />
    </RadioGroup>

    <ListView
        android:id="@+id/lista"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_marginTop="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gp_game_level"
        tools:layout_editor_absoluteX="0dp">

    </ListView>

</androidx.constraintlayout.widget.ConstraintLayout>