<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/congratulations_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_large"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="177dp"
            android:layout_height="132dp"
            android:contentDescription="@string/trophy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3"
            app:srcCompat="@drawable/img_trophy" />

        <TextView
            android:id="@+id/tv_congratulations"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/congratulations"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/tv_congratulations_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_x_medium"
            android:text="@string/you_have_a_good_memory"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_congratulations" />

        <Button
            android:id="@+id/btn_go_back_to_game"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/extra_large"
            android:layout_marginEnd="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/extra_large"
            android:padding="@dimen/pd_lg"
            android:text="@string/play_again"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.205"
            app:layout_constraintStart_toStartOf="@+id/iptScore"
            app:layout_constraintTop_toBottomOf="@+id/iptScore"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/buttonScore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_large"
            android:padding="@dimen/pd_lg"
            android:text="@string/submit_score"
            app:layout_constraintBottom_toBottomOf="@+id/btn_go_back_to_game"
            app:layout_constraintEnd_toEndOf="@+id/iptScore"
            app:layout_constraintHorizontal_bias="0.711"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/btn_go_back_to_game" />

        <TextView
            android:id="@+id/scoreText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/extra_large"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginEnd="@dimen/extra_large"
            android:text="@string/your_score"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_congratulations_desc" />

        <TextView
            android:id="@+id/score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/extra_large"
            android:layout_marginEnd="@dimen/extra_large"
            android:textAlignment="center"
            android:textColor="@color/green1"
            android:textSize="45sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scoreText"
            tools:text="234" />

        <!--        <EditText-->
        <!--            android:id="@+id/nameScore"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_margin="@dimen/spacing_large"-->
        <!--            android:ems="10"-->
        <!--            android:hint="@string/put_your_name_here"-->
        <!--            android:importantForAutofill="no"-->
        <!--            android:inputType="textPersonName"-->
        <!--            android:minHeight="48dp"-->
        <!--            android:textAlignment="center"-->
        <!--            android:textColorHint="#000000"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintHorizontal_bias="0.497"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/score" />-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/iptScore"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            app:helperText="@string/score_info"
            app:layout_constraintEnd_toEndOf="@+id/score"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/score"
            app:layout_constraintTop_toBottomOf="@+id/score">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/put_your_name_here"
                android:inputType="textPersonName"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>