<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginLeft="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/level"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="@dimen/header_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/gp_game_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_large"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/rd_easy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/r_btn_selector"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/easy"
            android:textColor="@drawable/r_btn_text_color_selector" />

        <RadioButton
            android:id="@+id/rd_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/r_btn_selector"
            android:button="@null"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/medium"
            android:textColor="@drawable/r_btn_text_color_selector" />

        <RadioButton
            android:id="@+id/rd_hard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/r_btn_selector"
            android:button="@null"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/hard"
            android:textColor="@drawable/r_btn_text_color_selector" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_restart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:padding="@dimen/pd_lg"
        android:text="@string/restart"
        app:layout_constraintEnd_toEndOf="@+id/gp_game_level"
        app:layout_constraintStart_toStartOf="@+id/gp_game_level"
        app:layout_constraintTop_toBottomOf="@+id/gp_game_level" />

    <!--    <ProgressBar-->
    <!--        android:id="@+id/pb"-->
    <!--        style="?android:attr/progressBarStyleHorizontal"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="@dimen/m_lg"-->
    <!--        android:layout_marginLeft="@dimen/m_lg"-->
    <!--        android:layout_marginEnd="@dimen/m_lg"-->
    <!--        android:layout_marginRight="@dimen/m_lg"-->
    <!--        android:layout_marginBottom="@dimen/m_lg"-->
    <!--        android:max="6"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/tv_progress" />-->

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/pb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/m_lg"
        android:layout_marginLeft="@dimen/m_lg"
        android:layout_marginEnd="@dimen/m_lg"
        android:layout_marginRight="@dimen/m_lg"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_progress"
        app:trackThickness="8dp">

    </com.google.android.material.progressindicator.LinearProgressIndicator>

    <TextView
        android:id="@+id/tv_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/m_lg"
        android:layout_marginLeft="@dimen/m_lg"
        android:layout_marginBottom="@dimen/m_lg"
        android:text="@string/progress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_blocks"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/m_lg"
        android:foregroundGravity="center"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/pb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_restart" />

    <Button
        android:id="@+id/btn_highscore"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="244dp"
        android:padding="@dimen/pd_lg"
        android:text="@string/highscore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>